# factory

./: .luarc.json  Dispatch System.xmind  command_parse.lua  id.md  oht_track.lua  serialization.lua
.helix/: languages.toml
Dashboard/: Cargo.toml  build.rs
Dashboard/src/: constant.rs  http_client.rs  main.rs
Dashboard/src/model/: account.rs  mod.rs  recipe.rs
Dashboard/src/ui/: account.rs  app.rs  mod.rs  recipe.rs
Dashboard/ui/: account.slint  app_window.slint  login.slint  login_window.slint  recipe.slint  state.slint  task.slint
Dashboard/ui/components/: divider.slint
EC/: .$化反UI.drawio.bkp  component.lua  computer.lua  config.json  jsonrpc.lua  unicode.lua  化反UI.drawio
oht/: config.lua  (+5 more)
server/: Cargo.toml  graph_test.sql  graph_test_query.sql  oht_track_config.lua  oht_trackgraph.json  test_transport.sql  track_graph.sql  transport.sql
server/ams/: Cargo.toml
server/ams/sql/functions/: update_upated_at.sql
server/ams/sql/tables/: machine.sql  process.sql  process_flow.sql
server/ams/src/: lib.rs
server/ams/src/mes/: mod.rs  process_flow.rs  tasks.rs
server/ams/src/mes/machine/: mod.rs  recipe.rs
server/container/: queue.lua
server/eap/: Cargo.toml
server/eap/src/: main.rs  mod.rs
server/mcs/: Cargo.toml  track_test.drawio
server/mcs/sql/: graph_test.sql  graph_test_query.sql  process_log.sql  transport.sql
server/mcs/src/: constant.rs  lib.rs  main.rs  mcs.rs
server/mcs/src/transport/: db_manager.rs  dispatch.rs  mod.rs  ping.rs  prelude.rs  track.rs  track_db.rs  vehicle.rs
server/mcs/src/transport/schedule/: action_planner.rs  adder.rs  db_client.rs  exec.rs  mod.rs  request.rs  state_update.rs
server/mcs/src/transport/server/: db.rs  mod.rs
server/mcs/src/transport/vehicle/: action.rs  mod.rs  overtime.rs  skill.rs  timeout.rs
server/mcs/tests/: oht_trackgraph.json
server/mes/: API.md  Cargo.toml
server/mes/sql/: process_flow.sql
server/mes/sql/function/recipe/: active_recipe.sql  inactive_recipe.sql  switch_recipe_version.sql
server/mes/sql/functions/: active_recipe.sql
server/mes/sql/tables/: recipe.sql  recipe_step.sql  task.sql  tool.sql  tool_type.sql
server/mes/src/: lib.rs  main.rs
server/mes/src/mes/: mod.rs  process_flow.rs  scheduler.rs  tool.rs
server/oht_control/: track.lua
server/server/: Cargo.toml
server/server/sql/table/: permission.sql  user.sql  user_permission.sql
server/server/src/: main.rs  state.rs
server/server/src/auth/: middleware.rs  mod.rs  token.rs
server/server/src/handlers/: auth.rs  mod.rs  process_flow.rs  recipe.rs
server/server/src/handlers/models/: mod.rs  recipe.rs
server/server/src/models/: mod.rs  process_flow.rs  recipe.rs  user.rs
server/server/src/models/request/: login.rs
server/src/: main.rs
server/src/mcs/: mod.rs  prelude.rs  queue.rs  repository.rs  track.rs  vehicle.rs  vehicle_dispatch.rs
server/src/mcs/transport/: dispatch.rs  mod.rs  ping.rs  server.rs  track.rs  vehicle.rs
server/src/mcs/vehicle/: dispatch.rs  mod.rs  ping.rs  vehicle.rs
server/src/oht/: mod.rs  track.rs  vehicle.rs
server/tests/: oht_track.lua  oht_trackgraph.json  queue.lua
(+41 files in other folders)
