[package]
name = "Dashboard"
version = "0.1.0"
edition = "2024"

[dependencies]
slint = "1.14"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
slint-build = "1.14"
