[workspace]
members = ["eap", "mcs"]

resolver = "3"

[workspace.package]
edition = "2024"
authors = [
    "qff233"
]

[workspace.dependencies]
jsonrpsee = { version = "0.26", features = ["server", "macros"] }
tokio = { version = "1.47", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-native-tls"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "json",
    "local-time",
] }
tracing-appender = "0.2.3"
dotenvy = "0.15"
chrono = "0.4.42"
