[workspace]
members = ["ams", "server"]

resolver = "3"

[workspace.package]
edition = "2024"
authors = ["qff233"]

[workspace.dependencies]
axum = { version = "0.8" }
chrono = { version = "0.4.42", features = ["serde"] }
jsonrpsee = { version = "0.26", features = ["server", "macros"] }
tokio = { version = "1.47", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["postgres", "chrono", "runtime-tokio"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "json",
    "local-time",
] }
uuid = { version = "1.8", features = ["v4"] }
tracing-appender = "0.2.3"
dotenvy = "0.15"
