[package]
name = "ams"
version = "0.1.0"
authors.workspace = true
edition.workspace = true

[dependencies]
axum = { workspace = true }
jsonrpsee = { workspace = true, features = ["server", "macros"] }
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sqlx = { workspace = true, features = ["postgres", "runtime-tokio-native-tls"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = [
    "env-filter",
    "json",
    "local-time",
] }
tracing-appender = { workspace = true }
dotenvy = { workspace = true }
chrono = { workspace = true }
